--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 
 /* 共通 */
+body {
+  font-family: "lato";
+}
+
 /* inner */
 .inner {
   width: 1100px;
@@ -21,6 +25,14 @@
 
 
 /* header */
+.header {
+  width: 100%;
+  padding: 15px 0;
+  position: fixed;
+  background-color: #fff;
+  z-index: 1;
+}
+
 .header__inner {
   display: flex;
   justify-content: space-between;
@@ -29,7 +41,6 @@
 /* icon */
 .fa-bolt {
   color: #999;
-  margin: 15px 0;
 }
 
 /* button */
@@ -39,10 +50,10 @@
   color: #fff;
   border: none;
   border-radius: 5%;
+  text-decoration: none;
 }
 
 .contact__btn {
-  margin: 15px 0;
   padding: 14px 12px;
 }
 
@@ -55,6 +66,7 @@
 
 /* main */
 .wrapper {
+  padding-top: 70px;
   font-size: 20px;
   text-align: center;
 }
@@ -94,6 +106,10 @@
   display: flex;
 }
 
+.about-us__text__container {
+  padding: 0 120px;
+}
+
 .about-us__title {
   font-size: 24px;
   font-family: 'Raleway';
@@ -101,7 +117,6 @@
 
 .about-us__text {
   margin-top: 35px;
-  padding: 0 70px;
   line-height: 1.3;
 }
 
@@ -110,6 +125,7 @@
 .works {
   background-color: #f2f2f2;
   padding-top: 60px;
+  padding-bottom: 70px;
 }
 
 .works__title {
@@ -121,21 +137,6 @@
   margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
-}
-
-
-/* works contact */
-.works__contact {
-  display: flex;
-  padding-bottom: 70px;
-}
-
-.works__text {
-  margin-right: 90px;
-}
-
-.works__btn {
-  padding: 14px 20px;
 }
 
 .works__images {
@@ -160,23 +161,34 @@
 /* works contact */
 .works__contact {
   margin-top: 90px;
+  padding: 0 180px;
+  display: flex;
+}
+
+.works__text {
+  margin-right: 90px;
+}
+
+.works__btn {
+  padding: 14px 20px;
 }
 
 /* skill */
 .skill {
+  padding-top: 70px;
+  padding-bottom: 100px;
   background-color: #4e4e4e;
 }
 
 .skill__title {
+  margin-bottom: 50px; 
   font-family: 'Raleway';
   font-size: 24px;
-  padding: 70px 0;
 }
 
 .graph {
   display: flex;
   justify-content: center;
-  padding-bottom: 100px;
 }
 
 .graph__box {
@@ -189,7 +201,7 @@
 
 .graph__title {
   font-size: 16px;
-  padding-top: 10px;
+  margin-top: 10px;
 }
 
 
@@ -201,7 +213,7 @@
 
 .navigation__content {
   width: 185px;
-  height: auto;
+  padding: 30px 0;
   list-style: none;
   display: inline-block;
   color: #74cfae;
