--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ body {
   font-family: "lato";
 }
 
+img {
+  vertical-align: bottom;
+}
+
 /* inner */
 .inner {
   width: 1100px;
@@ -18,7 +22,11 @@ body {
   clear: both;
 }
 
-/* テキスト　白 */
+/* テキスト */
+.is-rale {
+  font-family: "Raleway";
+}
+
 .text_white {
   color: #fff;
 }
@@ -104,18 +112,15 @@ body {
 .about-us__inner {
   padding-top: 50px;
   display: flex;
-}
-
-.about-us__text__container {
-  padding: 0 120px;
+  justify-content: space-around;
 }
 
 .about-us__title {
   font-size: 24px;
-  font-family: 'Raleway';
 }
 
 .about-us__text {
+  width: 650px;
   margin-top: 35px;
   line-height: 1.3;
 }
@@ -129,7 +134,6 @@ body {
 }
 
 .works__title {
-  font-family: 'Raleway';
   font-size: 24px;
 }
 
@@ -141,6 +145,7 @@ body {
 
 .works__images {
   margin-right: 100px;
+  transition: 0.3s;
   opacity: 0.7;
 }
 
@@ -153,7 +158,6 @@ body {
 }
 
 .works__images:hover {
-  transition: 0.3s;
   opacity: 1.0;
   cursor: pointer;
 }
@@ -161,13 +165,14 @@ body {
 /* works contact */
 .works__contact {
   margin-top: 90px;
-  padding: 0 180px;
   display: flex;
+  justify-content: center;
   align-items: flex-start;
 }
 
 .works__text {
   margin-right: 90px;
+  flex-basis: 53%;
 }
 
 .works__btn {
@@ -183,7 +188,6 @@ body {
 
 .skill__title {
   margin-bottom: 50px; 
-  font-family: 'Raleway';
   font-size: 24px;
 }
 
@@ -194,6 +198,7 @@ body {
 
 .graph__box {
   margin-right: 180px;
+  display: inline-block;
 }
 
 .graph__box:last-child {
@@ -219,22 +224,22 @@ body {
   list-style: none;
   display: inline-block;
   color: #74cfae;
+    transition: 0.3s;
 }
 
 .navigation__content:hover {
-  transition: 0.3s;
   background-color: #fff;
   cursor: pointer;
 }
 
 /* footer */
 .footer__wrapper {
+  padding-top: 20px;
+  padding-bottom: 25px;
   background-color: #74cfae; 
 }
 
 .copyright {
-  padding-top: 20px;
-  padding-bottom: 25px;
   font-size: 13px;
   color: #f2f2f2;
   display: flex;
