--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ img {
   width: 1100px;
   margin: 0 auto;
 }
+@media screen and (max-width: 1199px) {
+  .inner {
+    width: 97%;
+  }
+}
 
 /* clearfix */
 .clearfix {
@@ -47,7 +52,7 @@ img {
 }
 
 /* icon */
-.fa-bolt {
+.header__icon {
   color: #999;
 }
 
@@ -59,17 +64,51 @@ img {
   border: none;
   border-radius: 5%;
   text-decoration: none;
+  transition: 0.3s;
 }
 
 .contact__btn {
   padding: 14px 12px;
 }
 
-
 .btn_hover:hover {
-  transition: 0.3s;
   color: #333;
   cursor: pointer;
+}
+
+#hamburger {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .contact__btn {
+    display: none;
+  }
+  #hamburger {
+    display: block;
+    width: 20px;
+    padding: 10px;
+    border: solid 1px #ddd;
+    border-radius: 4px;
+    cursor: pointer;
+    position: relative;
+  }
+  #hamburger span {
+    width: 20px;
+    height: 2px;
+    background-color: #ddd;
+    border-radius: 4%;
+    position: absolute;
+    left: 10px;
+  }
+  #hamburger span:nth-child(1) {
+    top: 8px;
+  }
+  #hamburger span:nth-child(2) {
+    top: 14px;
+  }
+  #hamburger span:nth-child(3) {
+    top: 20px;
+  }
 }
 
 /* main */
@@ -102,7 +141,14 @@ img {
   margin-top: 20px;
   text-align: center;
 }
-
+@media screen and (max-width: 767px) {
+  .title__inner {
+    padding: 160px 0 130px 0;
+  }
+  .theme__title {
+    font-size: 80px; 
+  }
+}
 
 /* about us */
 .about-us {
@@ -124,7 +170,23 @@ img {
   margin-top: 35px;
   line-height: 1.3;
 }
-
+@media screen and (max-width: 1199px){
+  .about-us__inner {
+    flex-direction: column;
+  }
+  
+  .about-us__image {
+    margin-bottom: 20px;
+  }
+  
+  .about-us__text__container {
+    margin-bottom: 25px;
+  }
+  
+  .about-us__text {
+    width: 97%;
+  }
+}
 
 /* works */
 .works {
@@ -178,6 +240,34 @@ img {
 .works__btn {
   padding: 14px 20px;
 }
+@media screen and (max-width:1199px) {
+  .works__content {
+    flex-direction: column;
+  }
+  
+  .works__images {
+    margin-right: 0;
+  }
+  .works__images:nth-child(n+4) {
+    margin-top: 0;
+  }
+  .works__images:nth-child(4) {
+    margin-top: 80px;
+  }
+  
+  .works__contact {
+    margin-top: 80px;
+    flex-direction: column;
+  }
+  .works__text {
+    margin-right: 0;
+    margin-bottom: 40px;
+    flex-basis: 97%;
+  }
+  .works__btn {
+    margin: 0 auto;
+  }
+}
 
 /* skill */
 .skill {
@@ -189,11 +279,6 @@ img {
 .skill__title {
   margin-bottom: 50px; 
   font-size: 24px;
-}
-
-.graph {
-  display: flex;
-  justify-content: center;
 }
 
 .graph__box {
@@ -210,7 +295,18 @@ img {
   margin-top: 10px;
   color: #fff;
 }
-
+@media screen and (max-width:1199px) {
+  .skill {
+    padding-bottom: 20px;  
+  }
+  
+  .graph__box {
+    margin-right: 0;
+    margin-bottom: 88px;
+    display: flex;
+    flex-direction: column;
+  }
+}
 
 /* navigation */
 .navigation__wrapper {
@@ -218,18 +314,31 @@ img {
   background-color: #f2f2f2;
 }
 
-.navigation__content {
+.navigation__icon {
   width: 185px;
   padding: 30px 0;
   list-style: none;
   display: inline-block;
   color: #74cfae;
-    transition: 0.3s;
+  transition: 0.3s;
 }
 
-.navigation__content:hover {
+.navigation__icon:hover {
   background-color: #fff;
   cursor: pointer;
+}
+@media screen and (max-width:767px) {
+  .navigation__wrapper {
+    padding: 50px 0;
+  }
+  .navigation__content {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+  }
+  .navigation__icon {
+    width: 100%;
+  }
 }
 
 /* footer */
