--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,13 @@ img {
 /* header */
 .header {
   width: 100%;
-  padding: 15px 0;
   position: fixed;
   background-color: #fff;
   z-index: 1;
 }
 
 .header__inner {
+  padding: 15px 0;
   display: flex;
   justify-content: space-between;
 }
@@ -173,16 +173,11 @@ img {
 @media screen and (max-width: 1199px){
   .about-us__inner {
     flex-direction: column;
+    padding-bottom: 25px;
   }
-  
   .about-us__image {
     margin-bottom: 20px;
   }
-  
-  .about-us__text__container {
-    margin-bottom: 25px;
-  }
-  
   .about-us__text {
     width: 97%;
   }
@@ -191,6 +186,9 @@ img {
 /* works */
 .works {
   background-color: #f2f2f2;
+}
+
+.works__inner {
   padding-top: 60px;
   padding-bottom: 70px;
 }
@@ -244,7 +242,6 @@ img {
   .works__content {
     flex-direction: column;
   }
-  
   .works__images {
     margin-right: 0;
   }
@@ -254,7 +251,6 @@ img {
   .works__images:nth-child(4) {
     margin-top: 80px;
   }
-  
   .works__contact {
     margin-top: 80px;
     flex-direction: column;
@@ -271,9 +267,12 @@ img {
 
 /* skill */
 .skill {
+  background-color: #4e4e4e;
+}
+
+.skill__inner {
   padding-top: 70px;
   padding-bottom: 100px;
-  background-color: #4e4e4e;
 }
 
 .skill__title {
@@ -299,7 +298,9 @@ img {
   .skill {
     padding-bottom: 20px;  
   }
-  
+  .skill__inner {
+    padding-bottom: 0;
+  }
   .graph__box {
     margin-right: 0;
     margin-bottom: 88px;
