--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ img {
   vertical-align: bottom;
 }
 
+a {
+  display: inline-block;
+}
+
 /* inner */
 .inner {
   width: 1100px;
@@ -113,7 +117,7 @@ img {
 
 /* main */
 .wrapper {
-  padding-top: 70px;
+  padding-top: 62px;
   font-size: 20px;
   text-align: center;
 }
@@ -168,6 +172,7 @@ img {
 .about-us__text {
   width: 650px;
   margin-top: 35px;
+  text-align: center;
   line-height: 1.3;
 }
 @media screen and (max-width: 1199px){
@@ -248,8 +253,11 @@ img {
   .works__images:nth-child(n+4) {
     margin-top: 0;
   }
-  .works__images:nth-child(4) {
-    margin-top: 80px;
+  .works__images:nth-child(3n) {
+    margin-bottom: 80px;
+  }
+  .works__images:last-child {
+    margin-bottom: 0;
   }
   .works__contact {
     margin-top: 80px;
@@ -311,8 +319,12 @@ img {
 
 /* navigation */
 .navigation__wrapper {
-  padding: 200px 0;
   background-color: #f2f2f2;
+}
+
+.navigation__inner {
+  width: 100%;
+  padding: 200px 0;
 }
 
 .navigation__icon {
